fixed overflow issue on intro section

--- a/css/main.css
+++ b/css/main.css
@@ -708,6 +708,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .container {
