--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -10,6 +10,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  overflow: hidden;
 }
 
 .container {
